assets/styles.css
/* Base resets */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box
}

html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  height: 100%
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700
}

h1 {
  margin: .67em 0;
  font-size: 38px;
  line-height: 44px
}

h2 {
  font-size: 32px;
  line-height: 36px
}

h3 {
  font-size: 24px;
  line-height: 30px
}

p {
  margin-top: 0;
  max-width: 60ch;
  margin-bottom: 8px
}

ol, ul {
  margin-top: 0;
  margin-bottom: 10px;
  padding-left: 40px
}

img {
  border: 0;
  max-width: 100%;
  vertical-align: middle;
  display: inline-block
}

a {
  background-color: transparent
}

a:active, a:hover {
  outline: 0
}

/* Body */
body {
  margin: 0;
  min-height: 100%;
  background-color: #fff;
  -webkit-transition: background-color 250ms;
  transition: background-color 250ms;
  font-family: 'Fk Display', sans-serif;
  color: #333;
  font-size: 1.1111111111111112vw;
  line-height: 1.5;
  font-weight: 400
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0
}

/* Page structure */
.page_wrapper {
  width: 100%
}

.page_wrapper.page-wrapper_info {
  overflow: hidden
}

.page-padding {
  padding-right: 32px;
  padding-left: 32px
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  max-width: 2560px;
  margin-right: auto;
  margin-left: auto
}

/* Typography scale */
.text-small {
  font-size: .875rem;
  line-height: 1.5;
  font-weight: 400
}

.text-medium {
  max-width: 55ch;
  margin-top: 0;
  font-size: 1.5rem;
  line-height: 1.2;
  font-weight: 400
}

.text-mid-large {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 3.125em;
  line-height: 1;
  font-weight: 400;
  letter-spacing: -.02em
}

.text-super {
  margin-top: 0;
  margin-bottom: 0;
  font-family: 'Mabry pro', sans-serif;
  font-size: 5em;
  line-height: 1;
  font-weight: 400;
  text-transform: uppercase
}

/* Body variants */
.body_information {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #000
}

.body_information.bg-colour-scroll {
  background-color: #DA5D23
}

/* Footer */
.footer_component {
  position: relative;
  z-index: 50;
  margin-top: auto;
  padding-top: 32px;
  padding-bottom: 32px
}

.footer-content-wrapper {
  display: -ms-grid;
  display: grid;
  width: 100%;
  grid-auto-columns: 1fr;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  -ms-grid-columns: 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  -ms-grid-rows: auto;
  grid-template-rows: auto
}

.footer-link-item {
  display: block;
  -webkit-transition: opacity 250ms;
  transition: opacity 250ms;
  text-decoration: none;
  cursor: pointer
}

.footer-link-item:hover {
  opacity: .5
}

.footer-link-text {
  margin: 0;
  line-height: 1.5;
  font-weight: 400
}

.footer-copyright-item {
  text-align: right
}

.footer-copyright-text {
  display: inline
}

/* Info intro section */
.section-info-intro {
  width: 100%
}

.info-intro-wrapper {
  padding-top: 100px;
  padding-bottom: 100px
}

.info-intro-text-wrapper {
  margin-top: 32px;
  margin-bottom: 32px
}

.info-intro-text {
  max-width: 40ch
}

/* Info list section */
.section-info-list {
  width: 100%
}

.info-list-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  grid-column-gap: 64px
}

.info-list-column.disciplines-column {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column
}

.disciplines-sub-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 64px
}

.info-list-heading {
  margin-top: auto;
  margin-bottom: auto
}

.info-list-divider {
  width: 100%;
  height: .1rem;
  margin-top: .5rem;
  margin-bottom: 1.1rem;
  background-color: #000
}

.info-list-item-text {
  display: inline;
  max-width: 50ch;
  margin-right: 6px
}

.info-list-item-text a:hover {
  text-decoration: underline
}

.info-list-item {
  display: inline-block;
  margin-bottom: .25rem;
  margin-left: 1.3rem;
  line-height: 1;
  text-indent: -1.3rem
}

.info-list-item.contact-paragraph {
  margin-left: 0;
  text-indent: 0
}

.info-list-item.info-list-link {
  cursor: pointer
}

.info-list-paragraph {
  max-width: 50ch;
  margin-bottom: 1rem
}

.info-list-block {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 3.5rem;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start
}

.info-list-block.discipline-list-block {
  margin-right: 32px;
  margin-bottom: 132px
}

/* Page cover (intro animation) */
.page-cover {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1900;
  display: none;
  background-color: #000;
  color: #000
}

.page-cover.page-cover-information {
  background-color: #DA5D23
}

.page-cover-content {
  position: fixed;
  top: 50vh;
  left: 50vw;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  z-index: 1910;
  text-align: center
}

.page-cover-heading {
  text-align: center
}
/* ... */

